Ask users to avoid using stage sizes that are too large

--- a/src/components/tw-settings-modal/settings-modal.css
+++ b/src/components/tw-settings-modal/settings-modal.css
@@ -77,6 +77,15 @@
 .custom-stage-size > * {
     margin-right: 0.5rem;
 }
+.large-stage-warning {
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    background: rgb(233, 233, 53);
+}
+[theme="dark"] .large-stage-warning {
+    background: rgb(114, 102, 0);
+}
 
 .info {
     margin-bottom: 0.25rem;
